--- a/EXERCICÍOS/EX001/index.html
+++ b/EXERCICÍOS/EX001/index.html
@@ -11,5 +11,6 @@
   <hr>
   <p>Esse é o meu primeiro exercicío! Estou muito feliz :)</p>
   <p>Este é um momento único! Estou criando um site! </p>
+  <p>Estou aprendendo todos os dias :)</p>
 </body>
 </html>
