--- a/EXERCICÍOS/ex022/fundo006.html
+++ b/EXERCICÍOS/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de fundo
+    <title>Fundo fixo de tela
     </title>
     <style>
         body{
@@ -12,13 +12,14 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
+            background-attachment: scroll;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +30,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit atque, nam impedit voluptates quo voluptatem aliquam eum maiores numquam architecto dolore dolor? Quas beatae quaerat animi laborum eius corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, officia pariatur labore enim adipisci eligendi fugit sunt? Quaerat laudantium accusamus a qui porro, eligendi ducimus voluptatem, quia nemo, beatae itaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta officia odit recusandae nobis accusantium? Corporis fugit enim iure vero quibusdam nemo at, accusantium obcaecati dolor? Nihil accusamus consequuntur aliquid recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora obcaecati illo facere, reprehenderit ipsa vitae veritatis eveniet eligendi mollitia, dicta quia ad modi quasi excepturi nulla unde accusamus voluptatibus tenetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint tenetur quis. Distinctio voluptatem nam sapiente minus vel ut harum fugiat, facere officia soluta in totam voluptatum ab. Facere, eius!  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit atque, nam impedit voluptates quo voluptatem aliquam eum maiores numquam architecto dolore dolor? Quas beatae quaerat animi laborum eius corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, officia pariatur labore enim adipisci eligendi fugit sunt? Quaerat laudantium accusamus a qui porro, eligendi ducimus voluptatem, quia nemo, beatae itaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta officia odit recusandae nobis accusantium? Corporis fugit enim iure vero quibusdam nemo at, accusantium obcaecati dolor? Nihil accusamus consequuntur aliquid recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit atque, nam impedit voluptates quo voluptatem aliquam eum maiores numquam architecto dolore dolor? Quas beatae quaerat animi laborum eius corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, officia pariatur labore enim adipisci eligendi fugit sunt? Quaerat laudantium accusamus a qui porro, eligendi ducimus voluptatem, quia nemo, beatae itaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta officia odit recusandae nobis accusantium? Corporis fugit enim iure vero quibusdam nemo at, accusantium obcaecati dolor? Nihil accusamus consequuntur aliquid recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit atque, nam impedit voluptates quo voluptatem aliquam eum maiores numquam architecto dolore dolor? Quas beatae quaerat animi laborum eius corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, officia pariatur labore enim adipisci eligendi fugit sunt? Quaerat laudantium accusamus a qui porro, eligendi ducimus voluptatem, quia nemo, beatae itaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta officia odit recusandae nobis accusantium? Corporis fugit enim iure vero quibusdam nemo at, accusantium obcaecati dolor? Nihil accusamus consequuntur aliquid recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit atque, nam impedit voluptates quo voluptatem aliquam eum maiores numquam architecto dolore dolor? Quas beatae quaerat animi laborum eius corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, officia pariatur labore enim adipisci eligendi fugit sunt? Quaerat laudantium accusamus a qui porro, eligendi ducimus voluptatem, quia nemo, beatae itaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta officia odit recusandae nobis accusantium? Corporis fugit enim iure vero quibusdam nemo at, accusantium obcaecati dolor? Nihil accusamus consequuntur aliquid recusandae.</p>
     </main>
 </body>
 </html>
