--- a/EXERCICÍOS/ex022/fundo007.html
+++ b/EXERCICÍOS/ex022/fundo007.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alinhamento vertical</title>
     <style>
-        #continer {
-            height: 500px;
+        #conteiner {
+            
+            position: relative;
+            height: 96vh;
             padding: 10px;
             background-color: purple;
         }
 
-        #canteudo {
+        #conteudo {
+            position: absolute ;
             height: 200px;
             width: 400px;
-            margin: auto;
+            background-color: yellow;
+
+            left: 50%;
+            top: 50%;
+            
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
