--- a/DESAFIOS/d011/desafio11.html
+++ b/DESAFIOS/d011/desafio11.html
@@ -6,8 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="imagens/icon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <head>
+        <h1>
+            As it Was
+        </h1>
+        <nav>
+            Por: <a href="https://pt.wikipedia.org/wiki/Harry_Styles" target="_blank"
+            rel="next">Harry Styles</a>
+        </nav>
+    </head> 
+
+    <main>
+        <p>
+            Holdin' me back
+            Gravity's holdin' me back
+            I want you to hold out the palm of your hand
+            Why don't we leave it at that?
+            Nothin' to say
+            When everything gets in the way
+            Seems you cannot be replaced
+            And I'm the one who will stay,
+        </p>
+        <div class="imagem">
+            <p>
+                oh
+                In this world, it's just us
+                You know it's not the same as it was
+                In this world, it's just us
+                You know it's not the same as it was
+                As it was, as it was
+            </p>
+        </div>
+        <p>
+            You know it's not the same
+            Answer the phone
+            "Harry, you're no good alone
+            Why are you sittin' at home on the floor?
+            What kind of pills are you on?"
+            Ringin' the bell
+            And nobody's comin' to help
+            Your daddy lives by himself
+            He just wants to know that you're well, oh
+            In this world, it's just us
+            You know it's not the same as it was
+            In this world, it's just us
+            You know it's not the same as it was
+            As it was, as it was
+        </p>
+        <div class="imagem">
+            <p>
+                You know it's not the same
+                Go home, get ahead, light-speed internet
+                I don't wanna talk about the way that it was
+                <strong>Leave America</strong>, two kids follow her
+            </p>
+        </div>
+        <p>
+            I don't wanna talk about who's doin' it first
+            As it was
+            You know it's not the same as it was
+            As it was, as it was
+        </p>
+    </main>
 </body>
 </html>
