--- a/DESAFIOS/d011/desafio11.html
+++ b/DESAFIOS/d011/desafio11.html
@@ -20,56 +20,71 @@
     </head> 
 
     <main>
-        <p>
-            Holdin' me back
-            Gravity's holdin' me back
-            I want you to hold out the palm of your hand
-            Why don't we leave it at that?
-            Nothin' to say
-            When everything gets in the way
-            Seems you cannot be replaced
-            And I'm the one who will stay,
-        </p>
-        <div class="imagem">
+        <section class="normal">
             <p>
-                oh
-                In this world, it's just us
-                You know it's not the same as it was
-                In this world, it's just us
-                You know it's not the same as it was
-                As it was, as it was
+                Holdin' me back <br>
+                Gravity's holdin' me back <br>
+                I want you to hold out the palm of your hand <br>
+                Why don't we leave it at that? <br>
+                Nothin' to say <br>
+                When everything gets in the way <br>
+                Seems you cannot be replaced <br>
+                And I'm the one who will stay, oh <br>
             </p>
-        </div>
-        <p>
-            You know it's not the same
-            Answer the phone
-            "Harry, you're no good alone
-            Why are you sittin' at home on the floor?
-            What kind of pills are you on?"
-            Ringin' the bell
-            And nobody's comin' to help
-            Your daddy lives by himself
-            He just wants to know that you're well, oh
-            In this world, it's just us
-            You know it's not the same as it was
-            In this world, it's just us
-            You know it's not the same as it was
-            As it was, as it was
-        </p>
-        <div class="imagem">
+        
             <p>
-                You know it's not the same
-                Go home, get ahead, light-speed internet
-                I don't wanna talk about the way that it was
-                <strong>Leave America</strong>, two kids follow her
+                In this world, it's just us <br>
+                You know it's not the same as it was <br>
+                In this world, it's just us <br>
+                You know it's not the same as it was <br>
+                As it was, as it was <br>
+                You know it's not the same <br>
             </p>
-        </div>
-        <p>
-            I don't wanna talk about who's doin' it first
-            As it was
-            You know it's not the same as it was
-            As it was, as it was
-        </p>
+        </section>
+
+        <section class="imagem">
+            <p>
+                Answer the phone <br>
+                "Harry, you're no good alone <br>
+                Why are you sittin' at home on the floor? <br>
+                What kind of pills are you on?" <br>
+                Ringin' the bell <br>
+                And nobody's comin' to help <br>
+                Your daddy lives by himself <br>
+                He just wants to know that you're well, oh <br>
+            </p>
+        </section>
+
+        <section class="normal">
+            <p>
+                In this world, it's just us <br>
+                You know it's not the same as it was <br>
+                In this world, it's just us <br>
+                You know it's not the same as it was <br>
+                As it was, as it was <br>
+                You know it's not the same <br>
+            </p>
+        </section>
+        
+        <section class="imagem">
+            <p>
+                Go home, get ahead, light-speed internet <br>
+                I don't wanna talk about the way that it was <br>
+                <strong>Leave America</strong>, two kids follow her <br>
+            </p>
+        </section>
+
+        <section class="normal">
+            <p>
+                I don't wanna talk about who's doin' it first <br>
+                As it was <br>
+                You know it's not the same as it was <br>
+                As it was, as it was <br>
+            </p>
+        </section>
+<footer>
+    <p>Site criado por <a href="https://github.com/tatianemiko" target="_blank">Tatiane Mikó</a> para o Curso em Vídeo</p>
+</footer>
     </main>
 </body>
 </html>
