Atualizei estilos dos blocos

--- a/DESAFIOS/d011/desafio11.html
+++ b/DESAFIOS/d011/desafio11.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="imagens/icon.ico" type="image/x-icon">
 </head>
 <body>
-    <head>
+    <header>
         <h1>
             As it Was
         </h1>
@@ -17,7 +17,7 @@
             Por: <a href="https://pt.wikipedia.org/wiki/Harry_Styles" target="_blank"
             rel="next">Harry Styles</a>
         </nav>
-    </head> 
+    </header> 
 
     <main>
         <section class="normal">
