Atualização de estilos, desafio 11

--- a/DESAFIOS/d011/desafio11.html
+++ b/DESAFIOS/d011/desafio11.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        
         <h1>
             As it Was
         </h1>
@@ -45,13 +46,20 @@
         <section class="imagem">
             <p>
                 Answer the phone <br>
-                "Harry, you're no good alone <br>
-                Why are you sittin' at home on the floor? <br>
-                What kind of pills are you on?" <br>
+
+                <article>
+                    "Harry, you're no good alone <br>
+                    Why are you sittin' at home on the floor? <br>
+                    What kind of pills are you on?" <br>
+                </article>
+            </p>
+
+            <p>
                 Ringin' the bell <br>
                 And nobody's comin' to help <br>
                 Your daddy lives by himself <br>
                 He just wants to know that you're well, oh <br>
+                
             </p>
         </section>
 
