--- a/DESAFIOS/d011/desafio11.html
+++ b/DESAFIOS/d011/desafio11.html
@@ -43,7 +43,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img1">
             <p>
                 Answer the phone <br>
 
@@ -74,7 +74,7 @@
             </p>
         </section>
         
-        <section class="imagem">
+        <section class="imagem" id="img2">
             <p>
                 Go home, get ahead, light-speed internet <br>
                 I don't wanna talk about the way that it was <br>
