--- a/EXERCICÍOS/ex023/tabela002.html
+++ b/EXERCICÍOS/ex023/tabela002.html
@@ -14,6 +14,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         tbody > tr:nth-child(odd) {
@@ -33,6 +34,14 @@
         thead {
             background-color: grey;
             color: white;
+            position: sticky;
+            top: -1px;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: black;
         }
 
         tfoot {
@@ -79,6 +88,79 @@
                 <td>Rio de Janeiro</td>
                 <td class="numero">45 919 015</td>
             </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="numero">45 919 015</td>
+            </tr>
+
         </tbody>
 
         <tfoot>
@@ -88,6 +170,34 @@
             </tr>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quod. Nisi doloremque suscipit, ipsa aliquam deleniti at, voluptatibus distinctio nulla labore vitae similique ab, modi sunt hic est aut enim! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, magni eius architecto nostrum esse consequatur tempora inventore labore nobis obcaecati animi necessitatibus, quos perspiciatis placeat eveniet sapiente! Sit, consequuntur fuga. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam reprehenderit reiciendis blanditiis. Ad, vitae nemo. Ut delectus, maxime voluptates, doloremque eum hic placeat magni quia est rem doloribus distinctio? Nemo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas, ea, accusantium neque rem omnis accusamus dolore quia consectetur nostrum repudiandae possimus. Veritatis expedita earum repellendus quidem tenetur, corrupti unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, maiores, optio eaque numquam hic sint accusantium harum veritatis quam magni laboriosam officiis blanditiis! Libero, quibusdam. Harum consequatur minima magnam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laboriosam, magnam impedit voluptatibus praesentium est ipsum fuga nam dolor illum temporibus deserunt! Quasi quo dolore officiis veritatis quas ipsam laborum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nam distinctio quibusdam similique culpa voluptas possimus, quasi ex eveniet commodi suscipit molestiae consequatur, mollitia cupiditate quos laudantium reprehenderit illo veniam. lore
+    </p>
+    
     
 </body>
 </html>
