--- a/EXERCICÍOS/ex024/iframe003.html
+++ b/EXERCICÍOS/ex024/iframe003.html
@@ -29,16 +29,16 @@
     </p>
 
     <ul>
-        <li> <a href="#"> Primeira pagina</a></li>
-        <li><a href="#"> Segunda pagian</a></li>
-        <li><a href="#">Terceira pagina</a></li>
+        <li> <a href="paginasextras/pag001.html" target="frame"> Primeira pagina</a></li>
+        <li><a href="paginasextras/pag002.html" target="frame"> Segunda pagina</a></li>
+        <li><a href="paginasextras/pag003.html" target="frame">Terceira pagina</a></li>
     </ul>
 
     <p>    
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis nulla soluta voluptas, blanditiis doloremque pariatur atque? Sit, mollitia perferendis! Labore facere, incidunt sint quo asperiores rerum earum fuga aliquam nostrum!
     </p>
 
-    <iframe src="" id="tela">
+    <iframe src="" id="tela" name="frame">
         <p>Infelizmente seu navegador não é compativel com esse buscador</p>
     </iframe>
 
