--- a/EXERCICÍOS/ex024/iframe003.html
+++ b/EXERCICÍOS/ex024/iframe003.html
@@ -38,7 +38,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis nulla soluta voluptas, blanditiis doloremque pariatur atque? Sit, mollitia perferendis! Labore facere, incidunt sint quo asperiores rerum earum fuga aliquam nostrum!
     </p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha uma das opções acima </h1> <p> Lorem Lorem</p>" id="tela" name="frame">
         <p>Infelizmente seu navegador não é compativel com esse buscador</p>
     </iframe>
 
