--- a/EXERCICÍOS/ex026/mq002/index.html
+++ b/EXERCICÍOS/ex026/mq002/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
     <link rel="stylesheet" href="estilo/style.css" media="all">
-    <link rel="stylesheet" href="estilo/landscape.css" media="screen and (orietation: landscape)">
-    <link rel="stylesheet" href="estilo/portrait.css" media="screen and (orietation: portrait)">
+    <link rel="stylesheet" href="estilo/landscape.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="estilo/portrait.css" media="screen and (orientation: portrait)">
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1> 
