--- a/EXERCICÍOS/ex026/mq005/index.html
+++ b/EXERCICÍOS/ex026/mq005/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opcão 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -27,5 +29,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minima dolore qui a molestiae similique commodi sapiente nisi! Minima commodi molestias voluptatum aliquam vero reprehenderit facilis animi amet iusto aspernatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aperiam fugiat doloribus perspiciatis optio, aliquam exercitationem ratione quae enim ab accusantium debitis reprehenderit vero et. Rerum, voluptatibus. Hic, eligendi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum voluptate doloribus repellendus magnam ducimus voluptatum eaque est. Beatae nulla quia laboriosam mollitia aliquam voluptates, soluta distinctio sint corporis est.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quisquam alias odit saepe hic praesentium suscipit architecto, esse magnam incidunt reprehenderit deserunt accusantium quidem autem magni labore totam blanditiis fugit!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
