--- a/EXERCICÍOS/ex027/index.html
+++ b/EXERCICÍOS/ex027/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <section id="loguin">
+        <section id="login">
             <div id="imagem">
                 
             </div>
