--- a/EXERCICÍOS/ex027/index.html
+++ b/EXERCICÍOS/ex027/index.html
@@ -15,7 +15,7 @@
                 
             </div>
             <div id="formulario">
-                <h1>Loguin</h1>
+                <h1>Login</h1>
                 <p>Bem-vindo, acesse sua conta para ter mais descontos promocionais.</p>
                 <form action="cadastro.php">
                     <p>
