--- a/EXERCICÍOS/ex027/index.html
+++ b/EXERCICÍOS/ex027/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/mobile.css">
     <link rel="stylesheet" href="estilo/media-query.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
     <title>Site loguin</title>
 </head>
 <body>
@@ -19,14 +20,18 @@
                 <p>Bem-vindo, acesse sua conta para ter mais descontos promocionais.</p>
                 <form action="cadastro.php">
                     <p>
-                        <label for="iemail">E-mail:</label>
+                        <span class="material-symbols-outlined">person</span>
                         <input type="email" name="email" id="iemail" placeholder="Seu e-mail" required>
+                        
                     </p>
                     <p>
-                        <label for="isen">Senha:</label>
+                        <span class="material-symbols-outlined">key</span>
                         <input type="password" name="sen" id="isen" placeholder="Sua senha" required>
+                        
                     </p>
-                    <p><input type="submit" value="Entrar"></p>
+                    <p>
+                        <input type="submit" value="Entrar">
+                    </p>
                     <a href="minha-senha.html">Esqueci minha senha</a>
                 </form>
             </div>
